# cairo-auth

./: .gitignore  README.md  skaffold.yaml
docs/: 01-cairo-auth-problem-description.tex
k8s/: certificates.yaml  kustomization.yaml
proxy/: .dockerignore  Cargo.toml  Dockerfile
proxy/k8s/: kustomization.yaml  proxy.yaml
proxy/src/: communication.rs  main.rs  shutdown_signal.rs
proxy/src/api/: mod.rs
proxy/src/api/request/: mod.rs
proxy/src/api/sqrt/: mod.rs
scripts/: 1-compile.sh  2-run.sh  3-prove.sh  4-verify.sh  request-run.sh
server/: Cargo.toml  Dockerfile
server/k8s/: kustomization.yaml  server.yaml
server/src/: main.rs
server/src/api/: mod.rs
server/src/api/square/: mod.rs
src/: main.cairo  main_input.json  request.cairo  request_input.json
