[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["tracing"] }
docopt = "1.1"
env_logger = "0.10"
hyper = { version = "0.14.27", features = ["full"] }
log = { version = "0.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "0.2" }
rcgen = { version = "0.11", features = ["pem"], default-features = false }
rustls = { version = "0.21", features = ["logging", "dangerous_configuration", "quic", "read_buf", "rustversion", "secret_extraction"] }
rustls-pemfile = "=2.0.0-alpha.1"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki = "0.22.1"
webpki-roots = "=0.26.0-alpha.1"
x509-parser = { version = "0.15.1", features = ["verify"] }

[dev-dependencies]
regex = "1.9"
ring = "0.16"
